assets/css/style.css
#table-container table {
    table-layout: fixed;
    width: 100%;
  }
  td, th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 300px;
    cursor: help; /* Show help cursor on hover */
  }
  td.sortedHashes {
    white-space: nowrap;        /* Don't wrap text */
    overflow: hidden;           /* Hide text that overflows */
    text-overflow: ellipsis;    /* Add ... when clipped (optional) */
    max-width: 500px;           /* Limit the width so it can overflow */
    position: relative;
  }
  .copyButton {
    margin-left: 5px;
    cursor: pointer;
    font-size: 0.9em;
    background: none;
    border: none;
  }

